[tool.poetry]
name = "yamgraph"
version = "0.1.0"
description = "Turn K8s yml files into KDL diagrams"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.1"
py-colour = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pylint = "^2.4.4"
black = "^19.10b0"
isort = "^4.3.21"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
